# simple-dns-changer

./: CMakeLists.txt  README.md  main.cpp
